<resources>
    <string name="app_name">Colavo</string>
    <string name="title_activity_login1">Sign in</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_name">Name</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register_and_sign_in">Sign up</string>
    <string name="action_sign_out">Sign out</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>
    <string name="title_activity_conversations">ConversationsActivity</string>
    <string name="create_conversation">Create a salon</string>
    <string name="create_customer">Create a customer</string>
    <string name="create_event">Create a event</string>
    <string name="checkout_stat">Monthly stat.</string>

    <string name="input_salon_name">Input salon name</string>
    <string name="input_salon_address">Input salon address</string>
    <string name="conversation_name">salon name</string>
    <string name="conversations_loading">Loading salon</string>
    <string name="customers_loading">Loading customer</string>
    <string name="loading">Loading customer</string>
    <string name="wait">Wait</string>
    <string name="dash">&#160;—&#160;</string>
    <string name="bottom_navi_1">Calendar</string>
    <string name="bottom_navi_2">Checkouts</string>
    <string name="bottom_navi_3">Stats</string>
    <string name="bottom_navi_4">Customers</string>
    <string name="bottom_navi_5">Settings</string>
    <string name="title_select_salon">Select a salon</string>
    <string name="title_activity_salon_main">Salon</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!--Calendar View-->
    <string name="action_today">Today</string>
    <string name="action_day_view">Day view</string>
    <string name="action_three_day_view">3 day view</string>
    <string name="action_week_view">Week view</string>
    <string name="needs_another_hairshop">Needs another hairshop?</string>
    <string name="inivitation_new_hairshop">Inivitation / New hairshop</string>

    <!--Customer Detail-->
    <string name="action_call">Call</string>
    <string name="action_edit_customer">Edit customer\'s info</string>
    <string name="action_prohibit">Prohibit reservation</string>
    <string name="action_prohibit_cancel">Cancel prohibit reservation</string>
    <string name="action_prohibit_body">Prohibited customer can\'t make a reservation.</string>
    <string name="action_prohibit_body_with_reservation">Customers with reservations. Do you want to prohibit? (Prohibited customer can\'t make a reservation.)</string>

    <string name="action_cancel">Cancel</string>
    <string name="action_search">Search</string>
    <string name="checkout_Text">Checkout</string>
    <string name="btn_edit_profile">Edit profile</string>
    <string name="customer">Customer</string>
    <string name="customer_prohibited">Prohibited customer</string>
    <string name="no_data_title">No data ;(</string>
    <string name="no_data_description">Please add some data here</string>
    <string name="modify">Modify</string>
    <string name="modified_date">modified date</string>
    <string name="tnc"><![CDATA[
    By using Colavo, you agree to Colavo\'s <a href="http://www.colavo.kr">Terms of Usage</a> and <a href="http://www.colavo.kr">Privacy</a>
    ]]></string>
    <string name="new_memo">Add note &amp; photo</string>

    <string name="err_phonenumber">Sorry, this customer doesn\'t have a phone number.</string>
    <string name="hint_password">Type in password (6 digits)</string>
    <string name="hint_sign_in">Type in email address</string>
    <string name="phone_number">Phone number</string>
    <string name="done">Done</string>
    <string name="err_name">Name is needed. check it please.</string>
    <string name="success_create_customer">Customer successfully added.</string>
    <string name="update_succeed">Updated successfully.</string>
    <string name="update_failed">Updated failed.</string>
    <string name="err_create_customer">Customer didn\'t added. please try again.</string>
    <string name="err_phone_duplicated">This number is registerd already. check it again please.</string>
    <string name="err_phone_notvalid">This phone number is not valid. check it again please.</string>
    <string name="success_phone">Phone number can be registered.</string>
    <string name="fund">Points</string>
    <!--    &lt;!&ndash; Shared element transition &ndash;&gt;
        <string name="logoTransitionName">customer_name</string>
        <string name="title_activity_salon_main">헤어샵</string>-->


</resources>
