<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_one"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/ic_calendar"
        android:title="@string/bottom_navi_1" />
    <item
        android:id="@+id/action_two"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_calculator"
        android:title="@string/bottom_navi_2" />
    <item
        android:id="@+id/action_three"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/ic_chart"
        android:title="@string/bottom_navi_3" />
    <item
        android:id="@+id/action_four"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/ic_person"
        android:title="@string/bottom_navi_4" />
    <item
        android:id="@+id/action_five"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/ic_gear"
        android:title="@string/bottom_navi_5" />
</menu>