<?xml version="1.0" encoding="utf-8"?>
<!-- Material Icon
<tabs>
    <tab
        id="@+id/action_calendar"
        icon="@drawable/ic_material_event_black_24dp"
        title="@string/bottom_navi_1" />
    <tab
        id="@+id/action_checkouts"
        icon="@drawable/ic_material_card_travel_black_24dp"
        title="@string/bottom_navi_2" />
    <tab
        id="@+id/action_stats"
        icon="@drawable/ic_material_assessment_black_24dp"
        title="@string/bottom_navi_3" />
    <tab
        id="@+id/action_customers"
        icon="@drawable/ic_material_person_black_24dp"
        title="@string/bottom_navi_4" />
    <tab
        id="@+id/action_settings"
        icon="@drawable/ic_material_settings_black_24dp"
        title="@string/bottom_navi_5" />
</tabs>
-->

<tabs>
    <tab
        id="@+id/action_calendar"
        icon="@drawable/ic_calendar"
        title="@string/bottom_navi_1" />
    <tab
        id="@+id/action_checkouts"
        icon="@drawable/ic_calculator"
        title="@string/bottom_navi_2" />
    <tab
        id="@+id/action_stats"
        icon="@drawable/ic_chart"
        title="@string/bottom_navi_3" />
    <tab
        id="@+id/action_customers"
        icon="@drawable/ic_person"
        title="@string/bottom_navi_4" />
    <tab
        id="@+id/action_settings"
        icon="@drawable/ic_gear"
        title="@string/bottom_navi_5" />
</tabs>
